Bug 307648 - Powerdevil KCM backgrounds differ
Summary: Powerdevil KCM backgrounds differ
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement-kcm (other bugs)
Version First Reported In: 4.9.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks: extramile
  Show dependency treegraph
 
Reported: 2012-10-01 01:26 UTC by Rohan Garg
Modified: 2012-10-15 17:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rohan Garg 2012-10-01 01:26:09 UTC
The powerdevilprofilesconfig has a lighter ui in one tab and the normal one in another
Lighter : http://i.imgur.com/RZzLz.png
Darker : http://i.imgur.com/MEJyk.png

Reproducible: Always

Steps to Reproduce:
1. kcmshell4 powerdevilprofilesconfig
2. "On AC Power" has a lighter background
3. Switch to "On Battery", which has a darker backround
Actual Results:  
UI background differs

Expected Results:  
UI background should be of the same color
Comment 1 Rohan Garg 2012-10-01 01:27:42 UTC
Also has a double margin.
Comment 2 Kai Uwe Broulik 2012-10-15 17:21:21 UTC
Git commit 1f0baecc4aaad1db234d9e2c1cbaec08a6894629 by Kai Uwe Broulik
Committed on 15/10/2012 at 19:09
Pushed by broulik into branch 'KDE/4.9'

Fix PowerDevil KCM's AC adaptor page missing gradient
Nice side-effect: The battery plasmoid's config dialog is now properly sized initially

REVIEW: 106864
FIXED-IN: 4.9.1
(cherry picked from commit 1f0baecc4aaad1db234d9e2c1cbaec08a6894629)

M +3 -3 powerdevil/kcmodule/profiles/EditPage.cpp
M +4 -72 powerdevil/kcmodule/profiles/profileEditPage.ui

http://commits.kde.org/kde-workspace/66df6d8561560a8c238108ac4d18b8caf22de613


Can you mark this bug report as RESOLVED FIXED, and please also add 4.9.3 to the field "Version Fixed In" so it will show up in the release announcement. Thanks!