Fix PowerDevil KCM's AC adaptor page missing gradient Nice side-effect: The battery plasmoid's config dialog is now properly sized initially

BUG: 307648
REVIEW: 106864
FIXED-IN: 4.9.3
(cherry picked from commit 1f0baecc4aaad1db234d9e2c1cbaec08a6894629)